--- a/Bsk.Solution/Bsk.Site/Fornecedor/Html/cadastroAtuacao.html
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Html/cadastroAtuacao.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
 
 <head>
@@ -37,6 +37,7 @@
         </div>
 
     </div>
+
     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 corpo-site">
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         <div class="col col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -107,56 +108,56 @@
             </div>
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         </div>
+    </div>
 
-        <!-- Menu -->
-        <div class="menu menuFechado">
-            <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 corpo-site">
-                <i class="glyphicon glyphicon-remove btn-fechar-menu pull-right" title="FECHAR MENU"></i>
-                <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Menu<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h2>
-                <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
-                <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
-                <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/areasAtuacao.jpg" class="img-responsive listaCotacao" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/negociacoes.jpg" class="img-responsive novaCotacao" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/historico.jpg" class="img-responsive minhasCotacoes" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/finalizado.jpg" class="img-responsive liberaPagamento" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/meuSaldo.jpg" class="img-responsive cadastrar" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/servicoAndamento.jpg" class="img-responsive cadastrar" width="100%" alt="">
-                    </div>
-                    <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <img src="img/pagamentoPendente.jpg" class="img-responsive cadastrar" width="100%" alt="">
-                    </div>
+    <!-- Menu -->
+    <div class="menu menuFechado">
+        <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 corpo-site">
+            <i class="glyphicon glyphicon-remove btn-fechar-menu pull-right" title="FECHAR MENU"></i>
+            <h2><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Menu<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h2>
+            <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
+            <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
+            <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/areasAtuacao.jpg" class="img-responsive listaCotacao" width="100%" alt="">
                 </div>
-                <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
+                <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/negociacoes.jpg" class="img-responsive novaCotacao" width="100%" alt="">
+                </div>
+                <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/historico.jpg" class="img-responsive minhasCotacoes" width="100%" alt="">
+                </div>
+                <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/finalizado.jpg" class="img-responsive liberaPagamento" width="100%" alt="">
+                </div>
+                <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/meuSaldo.jpg" class="img-responsive cadastrar" width="100%" alt="">
+                </div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/servicoAndamento.jpg" class="img-responsive cadastrar" width="100%" alt="">
+                </div>
+                <div class="col col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img src="img/pagamentoPendente.jpg" class="img-responsive cadastrar" width="100%" alt="">
+                </div>
             </div>
+            <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         </div>
-        <!-- Fim Menu -->
-
-        <!-- jQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Bootstrap JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- Outros scripts -->
-        <script src="js/jquery.mask.js"></script>
-        <script src="js/datatables.min.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <script src="js/wow.js"></script>
-        <script src="js/master.js"></script>
+    </div>
+    <!-- Fim Menu -->
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Outros scripts -->
+    <script src="js/jquery.mask.js"></script>
+    <script src="js/datatables.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="js/wow.js"></script>
+    <script src="js/master.js"></script>
 </body>
 
 </html>
