--- a/Bsk.Solution/Bsk.Site/Cliente/nav.html
+++ b/Bsk.Solution/Bsk.Site/Cliente/nav.html
@@ -41,17 +41,12 @@
         <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
         <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
-            <div class="col col-lg-1 col-md-1 col-sm-1 col-xs-1">&nbsp;</div>
-            <a class="col col-lg-3 col-md-3 col-sm-3 col-xs-3 btn-danger" style="text-align:center; height:100px; line-height: 100px;" href="../Admin/default.aspx">
-                Admin
+            <a class="col col-lg-5 col-md-5 col-sm-5 col-xs-5 btn-danger" style="text-align:center; height:100px; line-height: 100px;" href="../Cliente/default.aspx">
+                Sou cliente, desejo solicitar um serviço
             </a>
-            <div class="col col-lg-1 col-md-1 col-sm-1 col-xs-1">&nbsp;</div>
-            <a class="col col-lg-3 col-md-3 col-sm-3 col-xs-3 btn-danger" style="text-align:center; height:100px; line-height: 100px;" href="../Cliente/default.aspx">
-                Cliente
-            </a>
-            <div class="col col-lg-1 col-md-1 col-sm-1 col-xs-1">&nbsp;</div>
-            <a class="col col-lg-3 col-md-3 col-sm-3 col-xs-3 btn-danger" style="text-align:center; height:100px; line-height: 100px;" href="../Fornecedor/default.aspx">
-                Fornecedor
+            <div class="col col-lg-2 col-md-2 col-sm-2 col-xs-2">&nbsp;</div>
+            <a class="col col-lg-5 col-md-5 col-sm-5 col-xs-5 btn-danger" style="text-align:center; height:100px; line-height: 100px;" href="../Fornecedor/default.aspx">
+                Sou fornecedor, desejo disponibilizar meus serviços
             </a>
         </div>
         <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
