--- a/Bsk.Solution/Bsk.Site/Geral/parceiros.html
+++ b/Bsk.Solution/Bsk.Site/Geral/parceiros.html
@@ -37,7 +37,7 @@
     </div>
   
     <div class="filtro">
-      <div class="container">
+      <div class="container" style="display:none">
         <input type="text" placeholder="Qual serviço você precisa?      ">
         <img src="./assets/imagens/lupa.png" alt="lupa" class="lupa" style="width: 20px; height: 20px;">
       </div>
