Arrumando linkagem  do para parceiro/para clientes

--- a/Bsk.Solution/Bsk.Site/Geral/index.html
+++ b/Bsk.Solution/Bsk.Site/Geral/index.html
@@ -179,7 +179,7 @@
             só paga quando aceita o serviço concluído.
           </p>
     
-        <a href="cadastro.aspx" class="btn">Quero orçar</a>
+        <a href="cadastro.aspx?Tipo=cli" class="btn" class="btn">Quero orçar</a>
       </div>
       <iframe width="810" height="443" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
@@ -212,7 +212,7 @@
             para sua tranquilidade.
           </p>
     
-        <a href="cadastro.aspx?Tipo=cli" class="btn">Quero me cadastrar
+        <a href="cadastro.aspx?Tipo=for" class="btn">Quero me cadastrar
         </a>
       </div>
       <iframe width="810" height="443" data-aos="flip-left"
