--- a/Bsk.Solution/Bsk.Site/Geral/index.html
+++ b/Bsk.Solution/Bsk.Site/Geral/index.html
@@ -373,7 +373,11 @@
             });
         });
     </script>
-
+    <style>
+        header {
+            height: 170px !important;
+        }
+    </style>
 
 
 </body>
