--- a/Bsk.Solution/Bsk.Site/Geral/index.html
+++ b/Bsk.Solution/Bsk.Site/Geral/index.html
@@ -134,8 +134,8 @@
                 <span id="dynamic-text" style="display: none; color: white; margin-left: 10px; font-size:35px">FORNECEDOR</span>
             </a>
             <a class="header-button highlight" data-url="login.aspx">Para sua empresa</a>
-            <a class="header-button">para você</a>
-            <a class="header-button" data-url="loginfornecedor.aspx">fornecedor</a>
+            <!--<a class="header-button">para você</a>
+            <a class="header-button" data-url="loginfornecedor.aspx">fornecedor</a>-->
         </div>
         <!-- Moved nav down one line -->
         <nav class="menu" id="nav">
