--- a/Bsk.Solution/Bsk.Site/Cliente/nav.html
+++ b/Bsk.Solution/Bsk.Site/Cliente/nav.html
@@ -8,7 +8,7 @@
     <title>BRIKK</title>
     <link rel="icon" type="image/png" href="img/favico.png" />
     <!-- Bootstrap CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/master.css">
@@ -91,7 +91,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Outros scripts -->
     <script src="js/jquery.mask.js"></script>
     <script src="js/datatables.min.js"></script>
