--- a/Bsk.Solution/Bsk.Site/Fornecedor/Html/pagamento.html
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Html/pagamento.html
@@ -26,7 +26,7 @@
     <!-- Header site -->
     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 header-site">
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-        <div class="col col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <div class="col col-lg-4 col-md-4 col-sm-12 col-sm-12 col-xs-12">
             <img src="img/logo.png" class="img-responsive logo" alt="BRIKK">
         </div>
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
@@ -43,15 +43,15 @@
         <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12">&nbsp;</div>
         <div class="col col-lg-1 col-md-1 col-sm-12 col-xs-12 hidden-sm hidden-xs">&nbsp;</div>
         <div class="col col-lg-10 col-md-10 col-sm-12 col-xs-12">
-            <div class="col col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col col-lg-4 col-md-4 col-sm-12 col-sm-12 col-xs-12">
                 <img src="img/aguardandoTransferencia.jpg" class="img-responsive center-block btn-pagamento" alt="">
             </div>
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-            <div class="col col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col col-lg-4 col-md-4 col-sm-12 col-sm-12 col-xs-12">
                 <img src="img/transferido.jpg" class="img-responsive center-block btn-pagamento" alt="">
             </div>
             <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-            <div class="col col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div class="col col-lg-4 col-md-4 col-sm-12 col-sm-12 col-xs-12">
                 <img src="img/proximaTransferencia.jpg" class="img-responsive center-block btn-pagamento" alt="">
             </div>
         </div>
