--- a/Bsk.Solution/Bsk.Site/Fornecedor/Html/logado.html
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Html/logado.html
@@ -26,7 +26,7 @@
     <!-- Header site -->
     <div class="col col-lg-12 col-md-12 col-sm-12 col-xs-12 header-site">
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
-        <div class="col col-lg-4 col-md-4 col-sm-12 col-sm-12 col-xs-12">
+        <div class="col col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <img src="img/logo.png" class="img-responsive logo" alt="BRIKK">
         </div>
         <div class="col col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-lg hidden-md">&nbsp;</div>
