--- a/Bsk.Solution/Bsk.Site/Geral/index.html
+++ b/Bsk.Solution/Bsk.Site/Geral/index.html
@@ -19,24 +19,24 @@
             height: 100vh;
         }
 
-            .capa .container {
-                display: flex;
-                align-items: center;
-                height: 100%;
-            }
+        .capa .container {
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
 
         .contenudo-capa {
             width: 40%;
             padding-left: 111px;
         }
 
-            .contenudo-capa .titulo {
-                margin-bottom: 30px;
-            }
+        .contenudo-capa .titulo {
+            margin-bottom: 30px;
+        }
 
-            .contenudo-capa p {
-                width: 60%;
-            }
+        .contenudo-capa p {
+            width: 60%;
+        }
 
         @media only screen and (min-width: 551px) and (max-width: 787px) {
             .contenudo-capa {
@@ -63,7 +63,18 @@
                 width: 100%;
             }
         }
+        @media (max-width:780px) {
+            .menu {
+                display: flex;
+                justify-content: end !important;
+                align-items: center;
+                padding: 0 20px;
+            }
 
+            #nav.active ul {
+                height: auto !important;
+            }
+        }
         .menu {
             display: flex;
             justify-content: space-between;
@@ -75,19 +86,19 @@
             display: flex;
         }
 
-            .menu-itens-left a, .menu-itens-right a {
-                margin-right: 40px; /* Spacing between menu items */
-                color: white; /* Adjust the color as needed */
-                text-decoration: none;
-                text-transform: uppercase; /* Capitalize all menu text */
-                font-family: 'Rajdhani-semi', sans-serif; /* Setting the font */
-                font-size: 24px;
-                font-weight: 600; /* Semi-bold weight */
-            }
+        .menu-itens-left a, .menu-itens-right a {
+            margin-right: 40px; /* Spacing between menu items */
+            color: white; /* Adjust the color as needed */
+            text-decoration: none;
+            text-transform: uppercase; /* Capitalize all menu text */
+            font-family: 'Rajdhani-semi', sans-serif; /* Setting the font */
+            font-size: 24px;
+            font-weight: 600; /* Semi-bold weight */
+        }
 
-                .menu-itens-left a:hover, .menu-itens-right a:hover {
-                    color: #f08f00; /* Color on hover */
-                }
+        .menu-itens-left a:hover, .menu-itens-right a:hover {
+            color: #f08f00; /* Color on hover */
+        }
 
         .menu-itens-right {
             justify-content: flex-end;
@@ -118,9 +129,9 @@
             text-transform: uppercase; /* Uppercase text */
         }
 
-            .menu-topo .header-button:hover {
-                color: #f08f00; /* Darker background on hover */
-            }
+        .menu-topo .header-button:hover {
+            color: #f08f00; /* Darker background on hover */
+        }
     </style>
 
 </head>
@@ -129,31 +140,26 @@
     <!-- header -->
     <header>
         <div class="menu-topo container">
-            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
+            <a href="index.html">
                 <img src="./assets/imagens/logo.png" alt="BRIKK logomarca" class="logo">
-                <span id="dynamic-text" style="display: none; color: white; margin-left: 10px; font-size:35px">FORNECEDOR</span>
             </a>
-            <a class="header-button highlight" data-url="login.aspx">Para sua empresa</a>
-            <!--<a class="header-button">para você</a>
-            <a class="header-button" data-url="loginfornecedor.aspx">fornecedor</a>-->
+            <nav class="menu" id="nav">
+                <button id="btn-mobile">
+                    Menu
+                    <span id="hamburger"></span>
+                    <span id="dynamic-text" style="display: none; color: white; margin-left: 10px; font-size:35px">FORNECEDOR</span>
+                </button>
+                <ul class="menu-itens">
+                    <li>
+                        <a href="sobre.html"> sobre nós</a>
+                    </li>
+                    <li><a href="index.html#parceiros"> para parceiros</a></li>
+                    <li><a href="index.html#clientes"> PARA CLIENTES</a></li>
+                    <li><a href="ajuda.html"> ajuda</a></li>
+                    <li><a href="login.aspx" class="btn-cadastro">ENTRAR / CADASTRAR</a></li>
+                </ul>
+            </nav>
         </div>
-        <!-- Moved nav down one line -->
-        <nav class="menu" id="nav">
-            <button id="btn-mobile">Menu<span id="hamburger"></span></button>
-            <div class="menu-itens-left">
-                <a href="sobre.html">sobre nós</a>
-                <a href="#parceiros">para parceiros</a>
-                <a href="#clientes">PARA CLIENTES</a>
-                <a href="ajuda.html">ajuda</a>
-            </div>
-            <div class="menu-itens-right">
-
-                <a href="login.aspx">ENTRAR / CADASTRAR</a>
-            </div>
-        </nav>
-
-
-
     </header>
 
 
